[gd_scene load_steps=13 format=3 uid="uid://db066rrhenbna"]

[ext_resource type="Script" uid="uid://dfdqtfk1n0b1t" path="res://Scripts/MouthChaser.gd" id="1_8u4a8"]
[ext_resource type="Texture2D" uid="uid://tfajpwapjq6m" path="res://Assets/SpriteSheets/MouthChaser.png" id="2_4wbpc"]
[ext_resource type="Texture2D" uid="uid://bd0gj275ul666" path="res://Assets/Static/Crosshair.png" id="3_udm86"]
[ext_resource type="Texture2D" uid="uid://bmxqfab6eb0ui" path="res://Assets/Static/LineTile.png" id="4_jkd24"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xk2oa"]
atlas = ExtResource("2_4wbpc")
region = Rect2(23, 1, 21, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwarv"]
atlas = ExtResource("2_4wbpc")
region = Rect2(1, 1, 21, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0hpu"]
atlas = ExtResource("2_4wbpc")
region = Rect2(23, 1, 21, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdo4m"]
atlas = ExtResource("2_4wbpc")
region = Rect2(1, 1, 21, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_wydqd"]
atlas = ExtResource("2_4wbpc")
region = Rect2(23, 1, 21, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu07h"]
atlas = ExtResource("2_4wbpc")
region = Rect2(1, 1, 21, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_wvie2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk2oa")
}],
"loop": false,
"name": &"chasing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwarv")
}],
"loop": false,
"name": &"still",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0hpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdo4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wydqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu07h")
}],
"loop": false,
"name": &"warning",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mw0wt"]
size = Vector2(52, 46)

[node name="MouthChaserEnemy" type="Area2D" groups=["Enemy"]]
script = ExtResource("1_8u4a8")

[node name="animatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 3
texture_filter = 1
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_wvie2")
animation = &"warning"
frame = 3
frame_progress = 1.0

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_mw0wt")
debug_color = Color(1, 0, 0.0864689, 0.42)

[node name="crosshair" type="Sprite2D" parent="."]
visible = false
z_index = 3
texture_filter = 1
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_udm86")

[node name="attackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="warningTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="chaserLine" type="Line2D" parent="."]
visible = false
z_index = 1
texture_filter = 1
texture_repeat = 3
points = PackedVector2Array(0, 0)
texture = ExtResource("4_jkd24")
texture_mode = 1

[connection signal="timeout" from="warningTimer" to="." method="_on_warning_timer_timeout"]
